overflow-x fix

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -55,6 +55,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    overflow-x: hidden;
 }
 
 .landing-text {
